--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML Editor & Preview</title>
-  <link rel="icon" type="image/x-icon" href="https://cdn.sgb.or.id/sgb_img/favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href="https://ilhamnoorhabibie.blogspot.com/favicon.ico"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   
   
